--- a/client/src/modules/components/DefinitionSelection/TenantPopover.scss
+++ b/client/src/modules/components/DefinitionSelection/TenantPopover.scss
@@ -1,8 +1,4 @@
 .TenantPopover {
-  .Popover__dialog {
-    min-width: 221px;
-  }
-
   .ButtonGroup {
     padding-bottom: 10px;
   }
