--- a/client/src/modules/components/Input/Input.scss
+++ b/client/src/modules/components/Input/Input.scss
@@ -59,7 +59,7 @@ textarea {
 
 input[type='radio'],
 input[type='checkbox'] {
-  width: 14px;
+  min-width: 14px;
   height: 14px;
   vertical-align: middle;
   padding: 0;
