--- a/client/src/modules/components/Popover/Popover.scss
+++ b/client/src/modules/components/Popover/Popover.scss
@@ -23,7 +23,8 @@
 
 .Popover__dialog {
   position: absolute;
-  width: max-content;
+  width: auto;
+  min-width: 250px;
   background-color: white;
   border: 1px solid lightgray;
   box-shadow: 0 2px 7px -4px #555;
